2002-02-27	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* mongoosev/include/mongoose-v.h: Added cache constants.
	* mongoosev/vectorisrs/vectorisrs.c: More tinkering to improve
	performance.

2002-02-08	Joel Sherrill <joel@OARcorp.com>

	* mongoosev/vectorisrs/vectorisrs.c: Fixed to use new frame format.

2001-02-05	Joel Sherrill <joel@OARcorp.com>

	* isr_entries.S: Removed comment incorrectly indicating this
	file was cpu_asm.S.
	* vectorexceptions.c (mips_dump_exception_frame): New routine
	broken out from default exception handler.

2001-02-01	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* mongoosev/vectorisrs/vectorisrs.c,
	shared/interrupts/vectorexceptions.c: Use rtems/bspIo.h, not just
	bspIo.h.

2001-02-01	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* Lots of tinkering and tuning as part of improving interrupt latency
	and improving the per-task interrupt level control and FP mask handling.
	With these modifications interrupt latency was measured at a worst-case
	of 100us, average below 60 us on a 12 Mhz R3000 class CPU with 50
	RTEMS tasks in the application.
	* mongoosev/README: Updated.  
	* mongoosev/include/mongoose-v.h: Masks modified.
	* mongoosev/vectorisrs/vectorisrs.c: Significant overhaul to address
	software prioritization of interrupts.  If a higher priority interrupt
	occurs while we are looking for new interrupts, we will reinitiate the
	scan of all interrupts.
	* shared/interrupts/vectorexceptions.c: Removed warning and deleted
	blank lines.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* mongoosev/vectorisrs/vectorisrs.c: Include rtems/bspIo.h instead of bspIo.h.
	* r46xx/vectorisrs/vectorisrs.c: Include rtems/bspIo.h instead of bspIo.h.
	* shared/interrupts/vectorexceptions.c: Include rtems/bspIo.h instead of bspIo.h.
	* tx39/vectorisrs/vectorisrs.c: Include rtems/bspIo.h instead of bspIo.h.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.