@@ -10,10 +10,13 @@ void mips_install_isr_entries( void )
 {
 #if __mips == 1
   void exc_utlb_code(void);
+  void exc_dbg_code(void);
   void exc_norm_code(void);
 
   memcpy( (void *)UT_VEC, exc_utlb_code, 40 );  /* utlbmiss vector */
+  memcpy( (void *)DB_VEC, exc_dbg_code, 40 );
   memcpy( (void *)E_VEC, exc_norm_code, 40 );   /* exception vevtor */
+
 #elif __mips == 3
   void exc_tlb_code(void);
   void exc_xtlb_code(void);
@@ -25,5 +28,6 @@ void mips_install_isr_entries( void )
   memcpy( (void *)C_VEC, exc_cache_code, 40 );  /* cache error vector */
   memcpy( (void *)E_VEC, exc_norm_code, 40 );   /* exception vector */
 #endif
+
   rtems_cache_flush_entire_data();
 }
