@@ -1,3 +1,10 @@
+2002-03-05	Greg Menke <gregory.menke@gsfc.nasa.gov>
+
+	* shared/interrupts/installisrentries.c: Added support for debug
+	exception vector.
+	* shared/interrupts/isr_entries.S: Added support for debug exception
+	vector.
+	
 2002-02-27	Greg Menke <gregory.menke@gsfc.nasa.gov>
 
 	* mongoosev/include/mongoose-v.h: Added cache constants.
